<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/doctor_detailes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_demi_bold"
                    android:text="Raj Kumar Sharma"
                    android:textColor="@color/colorBLack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="MBBS MD, Mch."
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gostroenterology"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Head of Department"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gostroenterology"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_demi_bold"
                    android:text="Max Hospital Saket"
                    android:textColor="@color/colorBLack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Sushant Lok"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gurugram, Haryana 122001"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text=""
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="CIN U74999Dl201HJ7"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/horizontal_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/info"
            android:layout_marginTop="5dp"
            android:background="@color/colorBLack" />

        <TextView
            android:id="@+id/rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_line1"
            android:fontFamily="@font/avenir_next_bold"
            android:text="Rx"
            android:textColor="@color/colorBLack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/horizontal_line1"
            android:fontFamily="@font/avenir_next_regular"
            android:text="20 Aug, 2016"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rx"
            android:fontFamily="@font/avenir_next_regular"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/dummy_texy"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/problems_symptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:drawableLeft="@drawable/ic_assignment_turned_in"
            android:drawableStart="@drawable/ic_assignment_turned_in"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:minWidth="200dp"
            android:text="@string/problems_symptoms"
            android:textColor="@drawable/selector_for_first_page" />

        <TextView
            android:id="@+id/symptoms_detailes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/problems_symptoms"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/avenir_next_regular"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/dummy_texy"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/physical_examinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/symptoms_detailes"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:drawableLeft="@drawable/ic_assignment_turned_in"
            android:drawableStart="@drawable/ic_assignment_turned_in"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:minWidth="200dp"
            android:text="@string/physical_examination"
            android:textColor="@drawable/selector_for_first_page" />

        <TextView
            android:id="@+id/physical_examinations_detailes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/physical_examinations"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/avenir_next_regular"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/dummy_texy"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/diagnosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/physical_examinations_detailes"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:drawableLeft="@drawable/ic_assignment_turned_in"
            android:drawableStart="@drawable/ic_assignment_turned_in"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:minWidth="200dp"
            android:text="@string/diagnosis"
            android:textColor="@drawable/selector_for_first_page" />

        <TextView
            android:id="@+id/diagnosis_detailes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/diagnosis"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/avenir_next_regular"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/dummy_texy"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/diagnosis_detailes"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:drawableLeft="@drawable/ic_assignment_turned_in"
            android:drawableStart="@drawable/ic_assignment_turned_in"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:minWidth="200dp"
            android:text="@string/tests"
            android:textColor="@drawable/selector_for_first_page" />

        <TextView
            android:id="@+id/tests_detailes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tests"
            android:fontFamily="@font/avenir_next_regular"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:text="@string/dummy_texy"
            android:textColor="@color/colorBLack"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/refer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tests_detailes"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="-8dp"
            android:layout_marginStart="-8dp"
            android:drawableLeft="@drawable/ic_assignment_turned_in"
            android:drawableStart="@drawable/ic_assignment_turned_in"
            android:fontFamily="@font/avenir_next_regular"
            android:gravity="center_vertical"
            android:minWidth="200dp"
            android:text="@string/refer"
            android:textColor="@drawable/selector_for_first_page" />

        <LinearLayout
            android:id="@+id/refer_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/refer"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/refer_doctor_detailes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_demi_bold"
                    android:text="Raj Kumar Sharma"
                    android:textColor="@color/colorBLack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="MBBS MD, Mch."
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gostroenterology"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Head of Department"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gostroenterology"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_demi_bold"
                    android:text="Max Hospital Saket"
                    android:textColor="@color/colorBLack"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Sushant Lok"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="Gurugram, Haryana 122001"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text=""
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenir_next_regular"
                    android:text="CIN U74999Dl201HJ7"
                    android:textColor="@color/colorBLack"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>

